[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rhea-memory"
version = "0.1.0"
description = "Open memory layer for AI agents — 5-layer persistent context with dedup and compact feed generation"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "TimeLabs", email = "rhea@timelabs.dev"},
]
keywords = ["ai", "memory", "agents", "context", "llm"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

[project.urls]
Homepage = "https://github.com/serg-alexv/rhea-project"

[project.scripts]
rhea-memory = "rhea_memory.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
